# CosmicCalculator

./: .gitignore  Cargo.toml  README.md  io.github.Milli189.CosmicCalculator.yaml
res/: io.github.Milli189.CosmicCalculator.desktop
src/: main.rs
